# srp_backend

./: .env.example  .gitignore  CODE_REVIEW.md  HomeSystemAgent.md  README.md  config.py  main.py  pyproject.toml  test_mqtt_connection.py
api/: test_frontend.html  websocket_server.py
config/: room_agent.yaml  room_agent_bedroom.yaml  room_agent_livingroom.yaml  room_mapping.py
core/: agent.py
core/action/: __init__.py  base.py  conversation_action.py  conversation_action_enhanced.py  conversation_action_vad.py  listen_action.py  listen_action_vad.py  speak_action.py
core/client/: __init__.py  openai_client.py
core/intelligent-qa-system/: .env.example  environment.yml  pyproject.toml  rag_http_api.py  rag工具说明.md  requirements.txt  run_api.py  test.py
core/intelligent-qa-system/config/: settings.py
core/intelligent-qa-system/data/documents/markdown/: 星座性格.md  餐厅菜单.md
core/intelligent-qa-system/data/vector_store/: metadata.json
core/intelligent-qa-system/scripts/: build_index.py  test_document_loader.py  test_mcp_server.py  test_query.py  test_rag.py
core/intelligent-qa-system/src/document_loader/: base_loader.py  docx_loader.py  markdown_loader.py  pdf_loader.py
core/intelligent-qa-system/src/embeddings/: __init__.py  local_embeddings.py  qwen_embeddings.py
core/intelligent-qa-system/src/llm/: __init__.py  base_llm.py  deepseek_llm.py  qwen_llm.py
core/intelligent-qa-system/src/qa_chain/: rag_chain.py
core/intelligent-qa-system/src/retriever/: semantic_search.py
core/intelligent-qa-system/src/text_processor/: cleaner.py  splitter.py
core/intelligent-qa-system/src/vector_store/: faiss_store.py  store_manager.py
core/mcp_control/: .gitignore  README.md  __init__.py  connection.py  manager.py  mcp_server.example.json  protocols.py  pyproject.toml  router.py  tool_index.py
core/mcp_control/tools/: rag_search.py  web_search.py
core/room_agent/: __init__.py  room_agent.py
core/room_agent/beacon/: __init__.py  beacon_advertiser.py  beacon_config.py
core/room_agent/devices/: __init__.py  device_base.py  device_controller.py  device_registry.py  mcp_device_wrapper.py
core/room_agent/mdns/: __init__.py  advertiser.py
core/room_agent/models/: __init__.py  device_state.py  mqtt_messages.py
core/room_agent/mqtt/: __init__.py  client_manager.py
core/server/: __init__.py  communication_server.py  connection_manager.py  message_router.py  task_dispatcher.py
core/task/: __init__.py  loop.py  models.py  queue.py  scheduler.py  trigger.py  任务.md
core/task/executors/: __init__.py  action_chain.py  base.py  conversation.py  conversation_with_wake.py  dispatcher_task.py  mcp.py  patrol.py  user_task.py
docs/: ESP32_BEACON_BINDING.md
scripts/: generate_esp32_beacon.py  run_qa_bot.py  validate_beacon_binding.py
test/: conftest.py  test_actions.py  test_communication_server.py  test_conversation.py  test_faiss_distance.py  test_listen_action.py  test_mcp.py  test_speak_action.py
test/room_agent/: test_beacon_advertiser.py  test_beacon_config.py  test_device_controller.py  test_device_registry.py  test_mdns_advertiser.py  test_room_agent_beacon_integration.py  test_room_agent_integration.py
tests/: __init__.py
tests/room_agent/: README.md  __init__.py  test_mqtt_client.py
util/: audio.py  decoder.py  vad_detector.py
