[project]
name = "robot-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "openai>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "mcp>=1.1.2",
    "dashscope>=1.25.5",
    "websockets>=15.0.1",
    "pyaudio>=0.2.14",
    "webrtcvad>=2.0.10",
]
