[project]
name = "intelligent-qa-system"
version = "0.1.0"
description = "智能 RAG 问答系统 - 支持文档检索和语义搜索"
readme = "rag工具说明.md"
requires-python = ">=3.12"

dependencies = [
    # ==================== 基础 ====================
    "python-dotenv>=1.0.0",

    # ==================== 数据处理 ====================
    "numpy>=2.0.0",
    "pandas>=2.0.0",

    # ==================== Web / API ====================
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",

    # ==================== LLM ====================
    "openai>=1.0.0",
    "dashscope>=1.25.5",

    # ==================== RAG ====================
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    "pypdf2>=3.0.0",
    "pdfplumber>=0.10.0",
    "python-docx>=1.1.0",
    "markdown>=3.5.0",

    # ==================== 工具 ====================
    "tqdm>=4.66.0",
    "colorama>=0.4.6",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
gpu = [
    "faiss-gpu==1.7.2; sys_platform != 'darwin' and python_version < '3.11'",
]

# ==================== 告诉 setuptools：这是脚本工程 ====================
[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
include = []

# ==================== 构建系统 ====================
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
